syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";

option go_package = "card-service/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";


service Greeter {
      rpc CreateCard(createCardRequest) returns (createCardResponse){
        option (google.api.http)={
          post:"/v1/create",
          body:"*"
        };
      };

      rpc UpdateCard(updateCardRequest) returns (updateCardResponse){
        option (google.api.http)={
          put:"v1/update",
          body:"*"
        };
      };

      rpc DeleteCard(deleteCardRequest) returns (deleteCardResponse){
        option (google.api.http)={
          delete:"v1/delete/{card_id}",
          body:"*"
        };
      };

      rpc FindCard(findCardRequest) returns (findCardResponse){
        option (google.api.http)={
          get:"v1/find/{card_id}";
        };
      };
}






message createCardRequest{
  int64 card_id=1;
  int64 account_number=2;
  string card_number=3;
  string card_type=4;
  string card_status=5;
  string expiry_date=6;
  string daily_limit=7;
  string monthly_limit=8;
  string pin_attempt=9;
}
message createCardResponse{
  int64 card_id=1;
  int64 account_number=2;
  string card_number=3;
  string card_type=4;
  string card_status=5;
  string expiry_date=6;
  string daily_limit=7;
  string monthly_limit=8;
  string pin_attempt=9;
  string message=10;
}


message updateCardRequest{
  int64 card_id=1;
  int64 account_number=2;
  string card_number=3;
  string card_type=4;
  string card_status=5;
  string expiry_date=6;
  string daily_limit=7;
  string monthly_limit=8;
  string pin_attempt=9;

}

message updateCardResponse{
  int64 card_id=1;
  int64 account_number=2;
  string card_number=3;
  string card_type=4;
  string card_status=5;
  string expiry_date=6;
  string daily_limit=7;
  string monthly_limit=8;
  string pin_attempt=9;
  string message=10;

}


message deleteCardRequest{
  int64 card_id=1;
  int64 account_number=2;
}

message deleteCardResponse{
  int64 card_id=1;
  int64 account_number=2;
  string card_number=3;
  string card_type=4;
  string card_status=5;
  string expiry_date=6;
  string daily_limit=7;
  string monthly_limit=8;
  string pin_attempt=9;
  string message=10;
}

message findCardRequest{
  int64 card_id=1;
  int64 account_number=2;
  string card_number=3;
  string card_type=4;
  string card_status=5;
  string expiry_date=6;
  string daily_limit=7;
  string monthly_limit=8;
  string pin_attempt=9;
}

message findCardResponse{
  int64 card_id=1;
  int64 account_number=2;
  string card_number=3;
  string card_type=4;
  string card_status=5;
  string expiry_date=6;
  string daily_limit=7;
  string monthly_limit=8;
  string pin_attempt=9;
  string message=10;
}

